force-app/main/default/objects/Account/fields/Date_of_KYC_on_file__c.field-meta.xml
<CustomField>
    <fullName>Date_of_KYC_on_file__c</fullName>
    <label>Date of KYC on file</label>
    <type>Date</type>
</CustomField>