force-app/main/default/objects/Account/fields/Executive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Executive_Comments__c</fullName>
    <label>Executive Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>