force-app/main/default/objects/Account/fields/KYC_Check__c.field-meta.xml
<CustomField>
    <fullName>KYC_Check__c</fullName>
    <formula>IF(ISBLANK(TEXT(FICA_Rating__c)),Date_of_KYC_on_file__c + 700, 
 CASE(TEXT(FICA_Rating__c),
 &#39;Low&#39;, Date_of_KYC_on_file__c + 1066,
 &#39;Medium&#39;, Date_of_KYC_on_file__c + 700,
 &#39;High&#39;, Date_of_KYC_on_file__c + 365,
 null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next KYC Check Date</label>
    <type>Date</type>
</CustomField>