force-app/main/default/objects/Account/fields/Risk_Profile_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile_Rating__c</fullName>
    <label>Risk Profile Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low/Conservative Risk</fullName>
            </value>
            <value>
                <fullName>Medium/Moderate Risk</fullName>
            </value>
            <value>
                <fullName>Medium - High Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>