force-app/main/default/objects/Account/fields/Screened__c.field-meta.xml
<CustomField>
    <fullName>Screened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanction Screening</label>
    <type>Checkbox</type>
</CustomField>