force-app/main/default/objects/Account/fields/Screened_date__c.field-meta.xml
<CustomField>
    <fullName>Screened_date__c</fullName>
    <label>Screened date</label>
    <type>Date</type>
</CustomField>