force-app/main/default/objects/Account/validationRules/Cannot_change_old_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_old_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Executive_Comments__c ) ,
NOT( CONTAINS( Executive_Comments__c ,
PRIORVALUE(Executive_Comments__c) ))) ||
AND( ISBLANK(Executive_Comments__c) , NOT( ISBLANK( PRIORVALUE(Executive_Comments__c) ) ) )</errorConditionFormula>
    <errorDisplayField>Executive_Comments__c</errorDisplayField>
    <errorMessage>Only append to existing text.</errorMessage>
</ValidationRule>